--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.5",
-    "mongoose-unique-validator": "^5.0.1",
-    "nodemon": "^3.1.4",
-    "uuid": "^10.0.0"
+    "nodemon": "^3.1.4"
   },
   "devDependencies": {
     "bcryptjs": "^2.4.3",
