--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "mongoose": "^8.4.5",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pg": "^8.12.0",
+    "sequelize": "^6.37.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "bcryptjs": "^2.4.3",
+    "@types/bun": "latest",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "supertest": "^7.0.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
