--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
+    "sequelize-mock": "^0.10.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
